--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             <button id="printResi" style="display:none;">Print</button>
         </div>
         <button id="connectPrinter" type="button" style="margin-bottom:8px;">Connect Printer Bluetooth</button>
+        <div style="margin:16px 0; color:#444; font-size:14px; background:#f8f9fa; border-radius:6px; padding:10px 14px;">
+            <b>Petunjuk:</b><br>
+            1. Isi data pengiriman, klik <b>Buat Resi</b>.<br>
+            2. Untuk print ke printer Bluetooth, klik <b>Download PDF</b> lalu buka file PDF di aplikasi printer Bluetooth (misal: Label Print, PrinterShare, dsb).<br>
+            3. Tombol <b>Connect Printer Bluetooth</b> hanya untuk mendeteksi printer, tidak bisa print langsung dari web.<br>
+        </div>
         <div id="resiOutput" class="resi-output" style="display:none;"></div>
         <button id="downloadPDF" style="display:none;">Download PDF</button>
     </div>
