--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
             </fieldset>
             <label>Ekspedisi:
                 <select name="ekspedisi" required>
-                    <option value="JNT">JNT</option>
+                    <option value="J&T">J&T</option>
                     <option value="JNE">JNE</option>
                     <option value="TIKI">TIKI</option>
                     <option value="WAHANA">WAHANA</option>
                     <option value="POS">POS</option>
+                    <option value="LION">LION</option>
                 </select>
             </label><br>
             <label>Pembayaran:
